--- a/SPP/Project.toml
+++ b/SPP/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+GraphsOfConvexSets = "823ad9d2-5d47-4587-a0bc-029103bd504c"
 Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
 HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
